--- a/AwiSp_123140201_pertemuan6/pyramid_mahasiswa/development.ini
+++ b/AwiSp_123140201_pertemuan6/pyramid_mahasiswa/development.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:main]
-use = egg:pyramid_matakuliah
+use = egg:pyramid_mahasiswa
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
@@ -14,7 +14,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-sqlalchemy.url = postgresql://postgres:admin123@localhost:5432/pyramid_matakuliah
+sqlalchemy.url = postgresql://postgres:admin123@localhost:5432/pyramid_mahasiswa
 
 retry.attempts = 3
 
@@ -23,7 +23,7 @@ retry.attempts = 3
 # debugtoolbar.hosts = 127.0.0.1 ::1
 
 [pshell]
-setup = pyramid_matakuliah.pshell.setup
+setup = pyramid_mahasiswa.pshell.setup
 
 ###
 # wsgi server configuration
@@ -31,7 +31,7 @@ setup = pyramid_matakuliah.pshell.setup
 
 [alembic]
 # path to migration scripts
-script_location = pyramid_matakuliah/alembic
+script_location = pyramid_mahasiswa/alembic
 file_template = %%(year)d%%(month).2d%%(day).2d_%%(rev)s
 # file_template = %%(rev)s_%%(slug)s
 
@@ -45,7 +45,7 @@ listen = localhost:6543
 ###
 
 [loggers]
-keys = root, pyramid_matakuliah, sqlalchemy
+keys = root, pyramid_mahasiswa, sqlalchemy
 
 [handlers]
 keys = console
@@ -57,10 +57,10 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_pyramid_matakuliah]
+[logger_pyramid_mahasiswa]
 level = DEBUG
 handlers =
-qualname = pyramid_matakuliah
+qualname = pyramid_mahasiswa
 
 [logger_sqlalchemy]
 level = WARN
