--- a/AwiSp_123140201_pertemuan6/pyramid_mahasiswa/production.ini
+++ b/AwiSp_123140201_pertemuan6/pyramid_mahasiswa/production.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:main]
-use = egg:pyramid_matakuliah
+use = egg:pyramid_mahasiswa
 
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
@@ -12,12 +12,12 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
-sqlalchemy.url = sqlite:///%(here)s/pyramid_matakuliah.sqlite
+sqlalchemy.url = sqlite:///%(here)s/pyramid_mahasiswa.sqlite
 
 retry.attempts = 3
 
 [pshell]
-setup = pyramid_matakuliah.pshell.setup
+setup = pyramid_mahasiswa.pshell.setup
 
 ###
 # wsgi server configuration
@@ -25,7 +25,7 @@ setup = pyramid_matakuliah.pshell.setup
 
 [alembic]
 # path to migration scripts
-script_location = pyramid_matakuliah/alembic
+script_location = pyramid_mahasiswa/alembic
 file_template = %%(year)d%%(month).2d%%(day).2d_%%(rev)s
 # file_template = %%(rev)s_%%(slug)s
 
@@ -39,7 +39,7 @@ listen = *:6543
 ###
 
 [loggers]
-keys = root, pyramid_matakuliah, sqlalchemy
+keys = root, pyramid_mahasiswa, sqlalchemy
 
 [handlers]
 keys = console
@@ -51,10 +51,10 @@ keys = generic
 level = WARN
 handlers = console
 
-[logger_pyramid_matakuliah]
+[logger_pyramid_mahasiswa]
 level = WARN
 handlers =
-qualname = pyramid_matakuliah
+qualname = pyramid_mahasiswa
 
 [logger_sqlalchemy]
 level = WARN
